--- a/README.org
+++ b/README.org
@@ -22,3 +22,18 @@ Generally, every bend coincides with a peak or valley in the phred score curve. 
 This was computed by first creating a curve where every paired base on the 5' side raises the curve, every unpaired base causes no change, and every paired base on the 3' side decreases the curve. Then the points at which the structure "bends" are the points at which the derivative of this curve changes. A convolutional neural network will be well suited to act on this kind of pattern. I'm currently thinking the best approach is to use an exisiting network for initially predicting an RNA sequence's structure, and then using the phred score peaks and valleys to tweak the predicted points at which structure elements begin.
 
 I.e. whenever there is a peak in the phred score curve at base $i$, the secondary structure prediction should look like "..(((" or "))).." at that point (depending on the sequence context).
+
+* Analysis
+** Extrema
+Phred score extrema frequently occur near "bends" in secondary structure. Here are the current statistics for that:
+
+#+begin_example
+Total population: 1538
+Number of points which are near a peak XOR valley (exclusively): 1401
+Number of points which are not near a peak OR valley: 137
+Total peaks and valleys in the phred curve: 4475
+Percentage of peaks and valleys in the phred curve: 0.4877915849138871
+#+end_example
+
+** Hairpin Bending
+WIP
